# AI_BMT_GUI_Submitter_Linux_ARM64

./: CMakeLists.txt  README.md  main.cpp
example/classification/cpu/: Image_Classification_Implementaion.cpp
example/classification/deepX-M1/: CMakeLists.txt  classification_multiCore_callBack.cpp  classification_multiCore_wait.cpp  classification_singleCore.cpp  main.cpp
example/classification/deepX-M1/cmake/: dxapp.function.cmake
example/classification/hailo8/: CMakeLists.txt  main.cpp
example/classification/hailo8/utils/: async_inference.cpp  async_inference.hpp
example/objectDetection/cpu/: ObjectDetection_Implementation.cpp  Readme.txt
example/objectDetection/deepX-M1/: CMakeLists.txt  main.cpp  objectDetection_singleCore.cpp
example/objectDetection/hailo8/: main.cpp
include/: snu_bmt_interface.h
